--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "product-management",
+  "version": "1.0.0",
+  "main": "index.js",
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
