--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "product-management",
   "version": "1.0.0",
+  
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^5.3.3"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "keywords": [],
   "author": "",
